UC#2 Data Setup +2.5 hours

--- a/src/force-app/main/default/lwc/accountRelatedOrders/accountRelatedOrders.css
+++ b/src/force-app/main/default/lwc/accountRelatedOrders/accountRelatedOrders.css
@@ -5,3 +5,9 @@
 .pagination-combobox{
     width: 100px;
 }
+
+div .pagination{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start; 
+}
