Resolve some more sonar errors as a prep for UC#2.

--- a/src/force-app/main/default/lwc/accountOrders/accountOrders.css
+++ b/src/force-app/main/default/lwc/accountOrders/accountOrders.css
@@ -37,6 +37,10 @@
     border-bottom-right-radius: 0.25rem !important;
 }
 
+table caption {
+    display: none;
+}
+
 tbody tr {
     height: var(--table-body-row-height);
 }
